<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".CreateTaskFragment">

    <EditText
        android:id="@+id/taskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nuevaTarea" />

    <EditText
        android:id="@+id/taskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion" />

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darkBlue"
        android:text="@string/btnCrear" />
</LinearLayout>
